 - GBA: Fix non-USA 1.0 FireRed misdetecting as a ROM hack (fixes mgba.io/i/2100)
 - GBA: Fix crash when ROM loading fails
 - GBA e-Reader: Fix bitmap short strip scanning
 - GBA Video: Fix mode 5 frame 1 caching (fixes mgba.io/i/2075)
 - GBA Video: Don't attempt to copy invalid registers when switching renderer
 - Qt: Fix crash when switching from high-resolution OpenGL renderer to software
Misc:
 - Core: Truncate preloading ROMs that slightly exceed max size (fixes mgba.io/i/2093)
 - GBA: Default-enable VBA bug compat for Ruby and Emerald ROM hacks
 - GBA Memory: Log GPIO writes on non-GPIO carts as Pak Hardware instead of Memory
 - Qt: Add ROM filename and size to bug reporter

0.9.0: (2021-03-28)
Features:
 - e-Reader card scanning
 - New tool for converting between different save game formats
 - WebP and APNG recording
 - Separate overrides for GBC games that can also run on SGB or regular GB
 - Game Boy Player features can be enabled by default for all compatible games
 - Frame and I/O viewer support for Game Boy
 - Bug report tool for gathering information helpful for reporting bugs
 - Mute option in homebrew ports
 - Status indicators for fast-forward and mute in homebrew ports
 - VBA bug compatibility mode for ROM hacks that don't work on real hardware
 - Read-only support for MBC6 flash memory
 - New unlicensed GB mappers: Pokémon Jade/Diamond, BBD, and Hitek
 - Stack tracing tools in ARM debugger (by ahigerd)
 - Command scripts for CLI debugger (by ahigerd)
 - Scheduled event dumping in CLI debugger
 - ARM disassembler now resolves addresses to symbol names
 - Add Game Boy Player feature support to ports
 - Individual window types can now be toggled in debugging views
 - Support for the Wii U GamePad when running as an injected VC title
Emulation fixes:
 - ARM: Fix ALU reading PC after shifting
 - ARM: Fix STR storing PC after address calculation
 - ARM: Fix Addressing mode 1 shifter on rs == pc (fixes mgba.io/i/1926)