@@ -141,7 +141,6 @@ private:
 	std::array<std::array<uint32_t, 0x100000>, 3> m_buffers;
 	QList<uint32_t*> m_free;
 	QQueue<uint32_t*> m_queue;
-	QAtomicInt m_lagging = 0;
 	uint32_t* m_buffer = nullptr;
 	QPainter m_painter;
 	QMutex m_mutex;
